--- a/core/templates/cart/view.html
+++ b/core/templates/cart/view.html
@@ -67,7 +67,7 @@
     <div class="summary">
       <div class="summary-row"><span>عدد القطع</span><span id="sumItems">{{ items_count }}</span></div>
       <div class="summary-row"><span>المجموع</span><span id="sumProducts">{{ total|iqd }}</span></div>
-      <a href="{% url 'checkout' %}" class="primary">Proceed to Checkout</a>
+      <a href="{% url 'checkout' %}" class="primary">اتمام الطلب</a>
     </div>
   </div>
   {% else %}
