--- a/core/templates/dashboard/super_owner/issues.html
+++ b/core/templates/dashboard/super_owner/issues.html
@@ -10,6 +10,7 @@
       <li class="nav-item"><a class="nav-link" href="{% url 'super_owner_dashboard' %}">لوحة الإدارة</a></li>
       <li class="nav-item"><a class="nav-link" href="{% url 'super_owner_reports' %}">التقارير</a></li>
       <li class="nav-item"><a class="nav-link active" href="{% url 'super_owner_issues' %}">المشاكل</a></li>
+      <li class="nav-item"><a class="nav-link" href="{% url 'technical_debugger' %}">Technical Debugger</a></li>
     </ul>
     <div class="rounded-circle {% if system_status == 'Critical' %}bg-danger{% elif system_status == 'Warning' %}bg-warning{% else %}bg-success{% endif %}" style="width:24px;height:24px">
       <span class="visually-hidden">{{ system_status }}</span>
