--- a/core/templates/dashboard/super_owner/reports.html
+++ b/core/templates/dashboard/super_owner/reports.html
@@ -16,6 +16,7 @@
     <ul class="nav nav-pills">
       <li class="nav-item"><a class="nav-link" href="{% url 'super_owner_dashboard' %}">لوحة الإدارة</a></li>
       <li class="nav-item"><a class="nav-link active" href="{% url 'super_owner_reports' %}">التقارير</a></li>
+      <li class="nav-item"><a class="nav-link" href="{% url 'technical_debugger' %}">Technical Debugger</a></li>
     </ul>
     <div class="d-flex align-items-center gap-2">
       <a href="{% url 'home' %}" class="btn btn-outline-secondary">
